--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>6.2.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.29</version>
+        </dependency>
+
     </dependencies>
 
 </project>
